# comfy

./: .gitignore  Cargo.toml  README.md
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/cli/: mod.rs
compiler/src/compiler/: expression.rs  mod.rs  statements.rs  values.rs
compiler/src/compiler/clang/: mod.rs
compiler/src/compiler/translation/: access_modifier.rs  expression.rs  mod.rs  statements.rs  values.rs
examples/: arr.co  arr.comfy  condition.co  fact.co  sum.co  sum.comfy
parser/: Cargo.toml
parser/src/: lib.rs  main.rs
parser/src/lexer/: mod.rs
parser/src/parser/: common.rs  expressions.rs  literals.rs  mod.rs  statements.rs  types.rs
types/: Cargo.toml
types/src/: access_modifier.rs  expressions.rs  lib.rs  statements.rs  tokens.rs  values.rs
utils/: Cargo.toml
utils/src/: lib.rs
