[package]
name = "comfy-compiler"
version = "0.1.0"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Comfy lang compiler"
repository = "https://github.com/comfylang/comfy"
readme = "./README.md"
keywords = ["comfy", "comfy-lang", "comfy-compiler", "compiler", "cli"]
categories = ["command-line-utilities", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
