[package]
name = "comfy-compiler"
version = "0.1.0"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Comfy lang compiler"
repository = "https://github.com/comfylang/comfy"
readme = "./README.md"
keywords = ["comfy", "comfy-lang", "comfy-compiler", "compiler", "cli"]
categories = ["command-line-utilities", "compilers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-types = { path = "../types", version = "0.1.0" }
comfy-parser = { path = "../parser", version = "0.1.0" }
comfy-utils = { path = "../utils", version = "0.1.0" }
chumsky = { version = "=1.0.0-alpha.7", features = ["pratt", "label"] }
ariadne = "0.4.0"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
